Attempt fix top/back button click event bug on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ img {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: -5;
+  z-index: -1;
   height: 100vh;
 }
 
@@ -134,7 +134,7 @@ section:nth-child(even) {
   background-color: #222;
   color: #fff;
   position: fixed;
-  z-index: -5;
+  z-index: -1;
   transition: 500ms ease;
   opacity: 0;
 }
@@ -143,7 +143,7 @@ section:nth-child(even) {
   background-color: #222;
   color: #fff;
   position: fixed;
-  z-index: 5;
+  z-index: 10;
   opacity: 1;
 }
 
